2008-03-08  dave

	* [r45] t/no_dt.t:
	  Skip 2100 test on 64-bit systems.
	* [r44] lib/Calendar/Simple.pm:
	  Turn "licence" into a verb so CPANTS will recognise it.
	* [r43] lib/Calendar/Simple.pm:
	  Require Perl 5.6 (and, hence, use "our" and "warnings").
	  Use svn revision number.
	  Create licence section.
	* [r42] Build.PL, COPYING, MANIFEST:
	  Make files non-executable.
	* [r41] Build.PL:
	  Correct dependencies.
	  Change email address to mag-sol.com.
	  Increment version number.

2006-10-18  dave

	* [r40] lib/Calendar/Simple.pm:
	  Fixed undef values in comparisons

2006-10-16  dave

	* [r39] lib/Calendar/Simple.pm:
	  Bump version for release.
	* [r38] Build.PL:
	  Added pcal to Build.PL.

2006-10-15  dave

	* [r37] MANIFEST, lib/Calendar/Simple.pm:
	  Fixed MANIFEST, bumped version number.
	* [r36] bin, bin/pcal, lib/Calendar/Simple.pm:
	  Added pcal to the distribution
	* [r35] lib/Calendar/Simple.pm, t/date_span.t:
	  Added date_span function (and tests)

2006-10-11  dave

	* [r34] lib/Calendar/Simple.pm:
	  Removed excess parentheses
	* [r33] t/no_dt.t, t/test.t:
	  Slightly improved some tests

2006-09-10  

	* [r32] README.xml, lib/Calendar/Simple.pm:
	  Changed copywrite to Magnum Solutions.
	  Updated README to use Build.PL.

2006-09-04  

	* [r31] lib/Calendar/Simple.pm:
	  Changed to manual version number

2005-05-31  dave

	* [r30] Build.PL, lib/Calendar/Simple.pm:
	  Fixes to Build.PL.
	  Small changes to Pod.

2005-03-01  dave

	* [r29] lib/Calendar/Simple.pm:
	  Adding pod coverage tests
	* [r28] MANIFEST, t/no_dt.t, t/pod_coverage.t, t/test.t:
	  Added pod coverage tests

2004-12-04  dave

	* [r27] lib/Calendar/Simple.pm:
	  Added 'see also' reference to DateTime
	* [r26] t/test.t:
	  Don't run 2100 test if DateTime isn't installed

2004-10-30  dave

	* [r25] lib/Calendar/Simple.pm:
	  Moved Simple.pm
	* [r24] Build.PL, MANIFEST, Makefile.PL:
	  Removed Makefile.PL (now generated by Build.PL)
	  Added Build.PL
	  Updated MANIFEST
