@@ -1,22 +1,23 @@
 use Module::Build;
 
 my $build = Module::Build->new(
-	dist_version       => '1.18',
+	license            => 'perl',
+	dist_version       => '1.19',
 	dist_author        => 'Dave Cross <dave@mag-sol.com>',
         module_name        => 'Calendar::Simple',
 	requires           => {
-		Carp                => 0,
-		Time::Local         => 0,
+		Carp                  => 0,
+		'Time::Local'         => 0,
 	},
 	recommends         => {
-		DateTime            => 0,
+		DateTime              => 0,
 	},
         build_requires     => {
-        	Test::More          => 0,
+        	'Test::More'          => 0,
         },
 	build_recommends   => {
-		Test::Pod           => 0,
-		Test::Pod::Coverage => 0,
+		'Test::Pod'           => 0,
+		'Test::Pod::Coverage' => 0,
 	},
         create_makefile_pl => 'traditional',
         script_files       => [ 'bin/pcal' ],
