@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 f7078d7fb01e97176c4d44c4c7f6323827c960a5 Build.PL
-SHA1 a6c502b02d7ce1f777530f8d01afab4a9162ed28 Changes
+SHA1 591e63b84b3e9c797d1b309a8f30e9f1900160b2 Build.PL
+SHA1 d36fe009be52c99f9fb6fad9bfaed38bdf8c27ee Changes
 SHA1 b31b69c19e0a447cfeed058ba1b2b398ad24c9dd MANIFEST
-SHA1 c155924240e9009db10bc9db9212a10a47d2221d META.yml
-SHA1 c1625fe4d3cbc877333a3bd2c3f47681ae7b0bcf Makefile.PL
+SHA1 116bb3b5f56a19dc61c12afc7a5d56bb28fa8efe META.yml
+SHA1 c628f337300dcd8d815b0f33d15ad8ab5768475c Makefile.PL
 SHA1 173a7ec8f3a53ea802489542c6f314af4464c24b README
 SHA1 2fc32b2fff88c61137dcbf3eea02819738918b8b bin/pcal
 SHA1 477f35b60c32575dba3fa8a4fe0a02a64f3c47cf lib/Calendar/Simple.pm
@@ -30,7 +30,7 @@ SHA1 fd8a8e826e923cd76701f927193a915a71cdfb58 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFH0xPyhlYrNpFq+8ERApOyAJ42yKM2Ow/EFWWws9GOVIEky5DobgCcC1J7
-yTnBfmXGWzcDoky7Udh9Hn8=
-=vAt9
+iD8DBQFH07GyhlYrNpFq+8ERAli0AKCOWaQWwaPU9jSD6Ub6MelKpxmKnwCbBxng
+34pZpoH+mJChQh9ByVvdGTA=
+=SSY7
 -----END PGP SIGNATURE-----
